src/components/LatestNews/LatestNews.module.scss
.container {
  display: flex;
  width: 100%;
  flex-direction: column;
  flex-wrap: wrap;
}

.sideArticles {
  width: 100%;
  display: flex;
  flex-direction: column;
}

//Destop
@media only screen and (min-width: 768px) {
  .container {
    max-width: 1080px;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .sideArticles {
    width: 50%;
    display: flex;
    flex-direction: column;
  }
}

